--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Python Web framework
-Django==2.0.2
+Django==2.0.5
 
 # Strict separation of settings from code
 python-decouple==3.1
 
 # Use database URLs in Django applications
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 
 # Ease path/files operations
 Unipath==1.1
 
 # PostgreSQL adapter for the Python
-psycopg2==2.7.3.2
+psycopg2-binary==2.7.4
